<resources>
    <string name="app_name">MovieMan</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="movies">Movies</string>
    <string name="to_see">TO See</string>
    <string name="have_seen">HAVE Seen</string>
    <string name="about">About</string>

    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>

    <string name="view_all">See All</string>

    <string name="read_more">Read More</string>
    <string name="movie_details">Release Date  \nRuntime  </string>
    <string name="trailers">Trailers</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="biography">Biography</string>
    <string name="movie_cast">Movie Cast</string>
    <string name="tv_cast">TV Cast</string>
    <string name="tv_show_details">First Air Date  \nRuntime  \nStatus  \nOrigin Country  \nNetworks  </string>
    <string name="videos">Videos</string>
    <string name="similar_tv_shows">Similar TV Shows</string>

    <string name="no_network">No Internet Connection</string>

    <string name="MOVIE_DB_API_KEY">ee535b33eb9a9a4898620076656bea76</string>

    <string name="title_activity_movie">MovieActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="display_name">Display Name</string>

</resources>