<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_movies"
            android:title="@string/movies" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_to_see"
            android:title="@string/to_see" />
        <item
            android:id="@+id/item_have_seen"
            android:title="@string/have_seen" />
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="none">
        <item
            android:id="@+id/item_about"
            android:title="@string/about" />
    </group>

</menu>
